@@ -4,6 +4,8 @@ export(usl)
 exportClasses(USL)
 exportMethods(confint)
 exportMethods(efficiency)
+exportMethods(limit.scalability)
+exportMethods(optimal.scalability)
 exportMethods(overhead)
 exportMethods(peak.scalability)
 exportMethods(plot)
