@@ -1,0 +1,34 @@
+
+R version 3.6.2 (2019-12-12) -- "Dark and Stormy Night"
+Copyright (C) 2019 The R Foundation for Statistical Computing
+Platform: x86_64-apple-darwin15.6.0 (64-bit)
+
+R is free software and comes with ABSOLUTELY NO WARRANTY.
+You are welcome to redistribute it under certain conditions.
+Type 'license()' or 'licence()' for distribution details.
+
+R is a collaborative project with many contributors.
+Type 'contributors()' for more information and
+'citation()' on how to cite R or R packages in publications.
+
+Type 'demo()' for some demos, 'help()' for on-line help, or
+'help.start()' for an HTML browser interface to help.
+Type 'q()' to quit R.
+
+> # optimal-scalability.R --- Test function optimal.scalability
+> 
+> library(usl)
+> 
+> data(specsdm91)
+> 
+> u <- usl(throughput ~ load, specsdm91)
+> 
+> # Calculate where optimal scalability is reached
+> stopifnot(all.equal(optimal.scalability(u), 36.06401, 0.0001))
+> 
+> # Calculate scalability for different coefficients
+> stopifnot(all.equal(optimal.scalability(u, 0.001, 0.00001), 1000, 0.0001))
+> 
+> proc.time()
+   user  system elapsed 
+  0.449   0.113   0.558 
